--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.4.7",
     "ng4-loading-spinner": "^1.2.3",
+    "ng5-breadcrumb": "0.0.6",
+    "ng6-breadcrumbs": "^1.0.7",
+    "ngx-breadcrumbs": "0.0.3",
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.2.0",
     "normalize.css": "^8.0.0",
     "npm": "^6.4.1",
     "popper": "^1.0.1",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
